# denso_cobotta_ros2

./: LICENSE  README.md
cobotta_bringup/: CMakeLists.txt  package.xml
cobotta_bringup/launch/: denso_cobotta_bringup.launch.py
cobotta_control/: package.xml  setup.cfg  setup.py
cobotta_control/cobotta_control/: auto_calset.py  to_cobotta_node.py  to_rviz_node.py
cobotta_control/cobotta_control/pybcapclient/: bcapclient.py  orinexception.py  variant.py
cobotta_description/: CMakeLists.txt  package.xml
cobotta_description/meshes/: README.md
cobotta_description/rviz/: run_move_group.rviz
cobotta_description/urdf/: cobotta.gazebo.xacro  cobotta.trans.xacro  cobotta.xacro  cobotta_description.xacro  cobotta_hand_ros2_control.xacro  cobotta_ros2_control.xacro  materials.xacro
cobotta_moveit_config/: CMakeLists.txt  package.xml
cobotta_moveit_config/config/: cobotta.srdf  cobotta_controllers.yaml  cobotta_ros_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
cobotta_moveit_config/launch/: moveit_demo.launch.py
cobotta_run_move_group/: CMakeLists.txt  package.xml
cobotta_run_move_group/launch/: move_group.launch.py  move_group.rviz  move_group_interface.launch.py
cobotta_run_move_group/src/: run_move_group.cpp
cobotta_run_moveit_cpp/: CMakeLists.txt  package.xml
cobotta_run_moveit_cpp/config/: moveit_cpp.yaml
cobotta_run_moveit_cpp/launch/: moveit_cpp.launch.py  moveit_cpp.rviz
cobotta_run_moveit_cpp/src/: run_moveit_cpp.cpp
