<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobotta_moveit_config</name>
  <version>0.0.0</version>
  <description>The cobotta_moveit_config package</description>

  <maintainer email="tasada381@gmail.com">T.Asada</maintainer>
  <license>MIT license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>